--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,10 @@ body {
     z-index: 2;
 }
 .b-popup .b-popup-content{
-  margin: auto auto;
+  margin: 216px auto 15px auto;
   width: 390px;
   background-color: #ffffff;
-  padding: 50px 30px 55px 30px;
+  padding: 50px 30px 40px 30px;
   min-height: 590px;
   box-sizing: border-box;
 }
@@ -31,11 +31,10 @@ body {
   width: 20px;
   height: 20px;
   background-color: rgba(0,0,0,0);
-  margin-left: 1008px;
-  margin-right: auto;
-  margin-top: 150px;
-  margin-bottom: 10px;
+  margin-left: 50vh;
+  margin-top: -75px;
   cursor: pointer;
+  position: absolute;
 }
 .button-popup:hover{
   background-color: rgba(0,0,0,0);
@@ -209,7 +208,7 @@ option{
   align-items: center;
 }
 
-.header-logo {
+.logo-link {
   display: flex;
   width: 180px;
   position: relative;
@@ -487,6 +486,7 @@ h1 {
   color: #b59f5b;
   font-family: open-sans bold;
   list-style-type: none;
+  text-transform: uppercase;
 }
 
 .content-named {
@@ -595,7 +595,6 @@ h1 {
 
 .post-name {
   font-family: open-sans bold;
-  color: #0f0d0e;
   font-size: 14px;
   text-transform: uppercase;
   text-align: left;
@@ -605,9 +604,10 @@ h1 {
 
 .post-link {
   text-decoration: none;
+  color: #0f0d0e;
 }
 
-.post-name:hover {
+.post-link:hover {
   color: #b59f5b;
 }
 
@@ -891,8 +891,6 @@ h1 {
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 700;
-  line-height: 0;
-  margin-bottom: 20px;
   text-decoration: line-through;
 }
 
@@ -901,8 +899,6 @@ h1 {
   font-size: 20px;
   text-transform: uppercase;
   font-weight: 700;
-  line-height: 0;
-  margin-bottom: 20px
 }
 
 .shop-button {
@@ -1001,15 +997,14 @@ button:hover {
 }
 
 @media (max-width:640px) {
-  .b-popup-content {
+  .b-popup .b-popup-content {
     max-width: 90%;
+    margin-top: 55px;
   }
   .button-popup {
     width: 30px;
     height: 30px;
-    margin-left: 316px;
-    margin-top: 23px;
-    background-size: 30px;
+    margin-left: 43vh;
 }
 
   .header {
@@ -1030,15 +1025,8 @@ button:hover {
     display: flex;
     align-self: end;
     margin-left: auto;
-  }
-
-  .header-logo {
     width: 280px;
     height: 60px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    align-self: center;
   }
 
   .menu {
@@ -1343,8 +1331,7 @@ button:hover {
 
 @media (min-width:641px) and (max-width:1199px) {
   .button-popup {
-    margin-left: 560px;
-    margin-top: 200px;
+    margin-left: 33vh;
   }
 
   .header {
@@ -1364,7 +1351,7 @@ button:hover {
     height: 35px;
   }
 
-  .header-logo {
+  .logo-link {
     width: 160px;
     height: 35px;
   }
@@ -1668,6 +1655,16 @@ button:hover {
 }
 
 @media (orientation: landscape) and (max-width: 640px){
+  .b-popup .b-popup-content {
+    max-width: 90%;
+    margin-top: 55px;
+  }
+  .button-popup {
+    width: 30px;
+    height: 30px;
+    margin-left: 95vh;
+  }
+
   .logo-link {
     margin-left: auto;
     margin-right: auto;
@@ -1702,6 +1699,10 @@ button:hover {
 }
 
 @media (min-width:641px) and (max-width:1199px) and (orientation: landscape){
+  .button-popup {
+    margin-left: 44vh;
+  }
+
   .new-article:first-child {
     margin-right: 3px;
     width: calc(25% - 3px)
